Refactor `InMemoryServer` for improved code organization and update collection usage
- Removed unused `DEFAULT_HASH_LOAD_FACTOR` constant.
- Replaced `Arrays.asList` with `List.of` for better readability.
- Modularized private methods and classes to improve code structure.
- Reformatted and optimized the implementation of query and command handlers.